fix(header): 🐛 fix invisible home button in header

--- a/resources/skins.citizen.styles/components/Header.less
+++ b/resources/skins.citizen.styles/components/Header.less
@@ -78,10 +78,6 @@
 		.citizen-ui-icon {
 			position: absolute;
 			inset: 0;
-
-			&::before {
-				opacity: 0;
-			}
 		}
 	}
 
